syntax="proto3";

package stock;

message EastMoneyPage {
    
}

message EastMoneyData {
    string financecode = 1;
    string companycode = 2;
    string securityshortname = 3;
    string securitycode = 4;
    string subcode = 5;
    int64 fxzl = 6;
    int64 wsfxsl = 7;
    float applyont = 8;
    float issuepriceMoney = 9;
    float issueprice = 10;
    string purchasedate = 11;
    string lwrandate = 15;
    string listingdate = 16;
    float peissuea = 17;
    float lwr = 18;
    //float cbxjrgbs = 19;
    string sc = 20;
    float mzyqgs = 21;
    //float sgzs = 22;
    float applyontMoney = 23;
    //float averagelow = 24;
    string kb = 25;
    float zzf = 26;
    float sl = 27;
    float mzyqhl = 28;
    //float totaliiqrplaceoff = 29;
    string INDUSTRY = 30;
    float Close = 35;
    //float ChangePercent = 40;
    string ZgsmsOrYxs = 41;
    string Url = 42;
    float INDUSTRYPE = 43;
    float newPrice = 44;
    string wszqjkr = 45;
    string MAINBUSIN = 50;
    float ycwssgsx = 51;
    float ycwssgzj = 52;
    string Update = 53;
    float sgrqrow = 54;
}

message CodeData {
    //代号
    string id = 1;
    //交易所
    string exchange = 2;
    //简称
    string name = 3;
    //发行总数
    int64 fxzl = 4;
    //网上发行总数
    int64 wsfxsl = 5;
    //发行价格
    float issue = 6;
    //申购日期
    int64 purchase = 7;
    //发行市盈率
    float peissuea = 8;
    //行业信息
    string industry = 9;
    //主营业务
    string mainbusin = 13;
    //总涨幅
    float zzf = 15;
    //申购代码
    string security = 16;
    //上市日期
    int64 listing = 17;
    //行业市盈率
    float industrype = 20;
    //首日收盘价
    float closing = 21;
    //每中一签获利
    float mzyqhl = 22;
    //连续一字板数量
    float sl = 25;
    //创建日期
    int64 createTime = 30;
    //更新日期
    int64 updateTime = 31;
}
message BasicData {
    //代码
    string code = 1;
    //类型
    string exchange = 2;
    //日期, eg:20180314
    string date = 3;
    //今开
    int32 opening = 4;
    //收盘
    int32 closing = 5;
    //成交量
    int32 volume = 6;
    //最高
    int32 highest = 7;
    //最低
    int32 lowest = 8;
    //内盘
    int32 inside = 9;
    //外盘
    int32 outside = 10;
    //换手率
    int32 turnover = 11;
    //成交额
    int32 trading = 12;
    //振幅
    int32 amplitude = 13;
    //委比 单位:%
    int32 entrust = 14;
    //量比
    int32 amountRatio = 15;
    //流通市值
    int32 circulated = 16;
    //总市值
    int32 total = 17;
    //市盈率MRQ
    int32 peRatio = 18;
    //市净率
    int32 pbRatio = 19;
    //每股收益
    int32 income = 20;
    //每股净资产
    int32 per = 21;
    //总股本
    int32 equity = 22;
    //流通股本
    int32 flow = 23;
}
// 金额和单位
message AmountUnit {
    //数量
    float amount = 1;
    //单位
    string unit = 2;
}

message Funds {
    //错误码
    int32 errorNo = 1;
    //错误描述
    string errorMsg = 2;
    //资金信息
    FundsData fundsData = 3;
}

//资金数据
message FundsData {
    //流入
    int32 mainInflow = 1;
    //流入
    int32 retailInflow = 2;
    //流出
    int32 mainOutflow = 3;
    //流出
    int32 retailOutflow = 4;
    //主力信息
    repeated MainInfo mainInfo = 5;
}

//信息
message MainInfo {
    //日期
    string date = 1;
    //金额
    int32 amount = 2;
}

//数据库储存
message DBFunds {
    //代码
    string id = 1;
    //资金信息
    repeated DBFundsData funds = 2;
    //创建时间
    int64 create = 3;
    //更新日期
    int64 update = 4;
}

//数据库存储数据
message DBFundsData {
    //流入
    int32 mi = 1;
    //流入
    int32 ri = 2;
    //流出
    int32 mo = 3;
    //流出
    int32 ro = 4;
    //日期
    string date = 5;
}


//股票代码
message StockCode {
    //代码
    string code = 1;
    //交易所
    string exchange = 2;
}

//股票代码翻页
message StockCodePage {
    //当前页码
    int32 page = 1;
    //页面大小
    int32 size = 2;
    //总数
    int32 total = 5;
    //页面信息
    repeated StockCode codeList = 10;
}