syntax = "proto3";
package common;
option go_package = "gitlab.1dmy.com/ezbuy/base/dist/proto/common";

message Bytes {
	bytes data = 1;
}

message Strings {
	repeated string value = 1;
}

message Bools {
	repeated bool value = 1;
}

message Int32 {
	repeated int32 value = 1;
}

message Doubles {
	repeated double value = 1;
}

// 三元布尔: 不确定, True, False
enum TriBool {
	TriBoolNone = 0;
	TriBoolTrue = 1;
	TriBoolFalse = 2;
}

message I64Range {
	int64 from = 1;
	int64 to = 2;
}
