syntax = "proto3";
package friendsDeal;

import "common/ezbuy.proto";
import "friendsDeal/group.proto";
import "common/file.proto";

service Admin {
    option (common.service).webapi = true;
    // 激活团购商品
    rpc ActiveProduct(ActiveProductReq) returns (CommonResp);
    // 隐藏团购商品
    rpc HideProduct(ActiveProductReq) returns (CommonResp);
    // 激活团长优惠
    rpc ActiveCaptainBenefit(ActiveProductReq) returns (CommonResp);
    // 激活凑团
    rpc ActiveGatherMember(ActiveProductReq) returns (CommonResp);
    // 激活虚拟成团
    rpc ActiveVirtualMember(ActiveProductReq) returns (CommonResp);
    // 禁用单人团
    rpc DisableSingleMember(ActiveProductReq) returns (CommonResp);
    rpc ExportShareLinks(ShareLinksReq) returns (ShareLinksResp);
    // 导出凑团链接excel
    rpc ExportShareLinksExcel(ShareLinksReq) returns (ShareLinksDownloadResp){
        option (common.webapi).download = true;
    };
    // 同步拼团订单到卖家系统
    rpc SyncEzSeller(PaymentIDsReq) returns (CommonResp){
        option (common.timeout) = "360s";
    };
    // 拼团订单退单退款
    rpc RefundGroupbuyOrder(GroupOrderReq) returns (CommonResp){
        option (common.timeout) = "360s";
    };
    // 拼团订单成员退单退款
    rpc RefundGroupbuyOrderMember(PaymentIDReq) returns (CommonResp){
        option (common.timeout) = "60s";
    };
    // 修复错误状态的订单，目前只能修复应该成团，但是pengding的订单
    rpc FixOrder(FixOrderReq) returns (CommonResp){
        option (common.timeout) = "60s";
    };
    // 指定id的虚拟团成团
    rpc FinishVirtualGroup(FixOrderReq) returns (CommonResp){
        option (common.timeout) = "360s";
    };
    // 获取指定商品的sku信息
    rpc GetCurSkuStocks(GetCurSkuStocksReq) returns (GetCurSkuStocksResp);
    // 增添指定商品sku库存
    rpc AddCurSkuStock(AddCurSkuStockReq) returns (CommonResp);
    // 设置团长优惠团涉及的customerid
    rpc SetCustomersToGroup(SetCustomersToGroupReq) returns (CommonResp);
    // 获取团长优惠团涉及的customerid
    rpc GetCustomersFromGroup(ProductGet) returns (GetCustomersFromGroupResp);
    rpc Import(AdminImport) returns (AdminImportResp){
        option (common.webapi).upload = true;
    };
    rpc GetGroupProduct(GetGroupProductReq) returns (GetGroupProductResp);
    // 导入待选商品链接
    rpc ImportCandidateProsExcel(AdminImport) returns (CandidateProsResp){
        option (common.webapi).upload = true;
    };
    // 导出待选商品
    rpc ExportSelectedProsExcel(SelectedProsExcelReq) returns (SelectedProsExcelResp){
        option (common.webapi).download = true;
    };
    // 导入入选拼团商品
    rpc ImportGroupProsExcel(AdminImport) returns (CommonResp){
        option (common.webapi).upload = true;
    };
    // 更新小团结束时间
    rpc UpdateGroupEndDate(UpdateGroupEndDateReq) returns (CommonResp);
    // 获取开团或参团的限制次数
    rpc GetCreateAndJoinGroupLimitTimes(ProductGet) returns (GetCreateAndJoinGroupLimitTimesResp);
    // 更新开团或参团的限制次数
    rpc UpdateCreateAndJoinGroupLimitTimes(UpdateCreateAndJoinGroupLimitTimesReq) returns (CommonResp);
    // 获取团order及members信息
    rpc GetGroup(GetGroupReq) returns (GetGroupResp);
    // 更新团信息
    rpc UpdateGroupOrder(UpdateGroupOrderReq) returns (CommonResp);
    // 更新团members信息
    rpc UpdateGroupMembers(UpdateGroupMembersReq) returns (CommonResp);
    // 获取团信息
    rpc GetGroupOrder(GroupOrderReq) returns (GroupOrder);
    // 成团
    rpc FinishGroup(GroupOrderReq) returns (CommonResp){
        option (common.timeout) = "360s";
    };
}

message CommonReq {
    string catalogCode = 1;
}

message CommonResp {
    ErrorCode code = 1;
    string msg = 2;
}

message ActiveProductReq {
    string productId = 1;
    bool isActive = 2;
}

message ShareLinksReq {
    string catalogCode = 1;
    Setting setting = 2;
    LackPersons lack = 3;
    RemainHours hours = 4;
}

message Setting {
    string settingId = 1;
    repeated string refId =2;
}

message LackPersons {
    int32 lackPersons = 1;
}

message RemainHours {
    int32 remainHours = 1;
}

message ShareLinksResp {
    repeated string links = 1;
}

message ShareLinksDownloadResp {
    string filename = 1;
    bytes data = 2;
    string contentType = 3;
}

message PaymentIDsReq {
    repeated int32 paymentBillIds = 1;
    GroupOrderReq groupId = 2;
}

message PaymentIDReq {
    int32 paymentBillId = 1;
}

message GroupOrderReq {
    string groupId = 1;
}

message FixOrderReq {
    string groupId = 1;
    string groupOrderId = 2;
    int32 paymentBillId = 3;
}

message ProductGet {
    string settingId = 1;
    int64 gpId = 2;
    string refId = 3;
}

message GetCurSkuStocksReq {
    ProductGet pro = 1;
    CommonReq com = 2;
}

message ProductSku {
    string skuId = 1;
    string skuName = 2;
    int32 stock = 3;
}

message GetCurSkuStocksResp {
    ProductGet pro = 1;
    repeated ProductSku skus = 2;
    CommonResp resp = 3;
}

message AddCurSkuStockReq {
    ProductGet pro = 1;
    // 可以是负数
    ProductSku sku = 2;
    CommonReq com = 3;
}

message SetCustomersToGroupReq {
    string productId = 1;
    repeated int32 customerIds =2;
}

message GetCustomersFromGroupResp {
    CommonResp resp = 1;
    ProductGet pro = 2;
    repeated int32 customerIds =3;
    bool isActive = 4;
}

message AdminImport {
    string catalog = 1;
    common.File file = 2;
    string settingId = 3;
}

message AdminImportResp {
}

message GetGroupProductReq {
    int32 paymentBillId = 1;
}

message GetGroupProductResp {
    CommonResp resp = 1;
    GroupFee fee = 2;
}

message GroupFee {
    double ActualPrice = 1;
    double ActualOriginPrice = 2;
    double GroupPrice = 3;
    double GroupOriginPrice = 4;
    double TransportFee = 5;
    double AgentFee = 6;
    double exchange =7;
}

message CandidateProsResp {
    CommonResp resp = 1;
    string downloadReqId = 2;
}

message SelectedProsExcelReq {
    string downloadReqId = 1;
}

message SelectedProsExcelResp {
    string filename = 1;
    bytes data = 2;
    string contentType = 3;
}

message Sku {
    string name = 1;
    string weight = 2;
    string skuId = 3;
    int32 stock = 4;
}

message ExportProduct {
    string link = 1;
    string name = 2;
    repeated Sku skus = 3;
    string price = 4;
    string originalPrice = 5;
    string originPrice = 6;
    string weight = 7;
    CommonResp resp = 8;
}

message UpdateGroupEndDateReq {
    GroupOrderReq groupId = 1;
    int64 timeStamp = 2;
}

message GetCreateAndJoinGroupLimitTimesResp {
    int32 createLimitTimes = 1;
    // all = create + join
    int32 allLimitTimes = 2;
}

message UpdateCreateAndJoinGroupLimitTimesReq {
    ProductGet group = 1;
    int32 createLimitTimes = 2;
    int32 allLimitTimes = 3;
}

message GetGroupReq {
    string groupId = 1;
    string groupOrderId = 2;
    int32 paymentBillId = 3;
    string orderNumber = 4;
}

message GetGroupResp {
    CommonResp re = 1;
    GroupInfo group = 2;
}

message GroupInfo {
    GroupOrder order = 1;
    repeated GroupMember members = 2;
}

message GroupOrder {
    int64 CreateDate = 1;
    string GroupBuyNo = 2;
    string GroupId = 3;
    string CatalogCode = 4;
    int32 ObtainStock = 5;
    string Id = 6;
    int64 Gpid = 7;
    int64 UpdateDate = 8;
    string Url = 9;
    int64 StartDate = 10;
    int64 EndDate = 11;
    int64 GroupEndDate = 12;
    int32 MinPersons = 13;
    string OriginCode = 14;
    bool IsSingle = 15;
    bool IsCaptainBenefit = 16;
    bool IsVirtual = 17;
    int32 GroupStatus = 18;
    string GroupStatusCode = 19;
}

message GroupMember {
    int64 CreateDate      = 1;
    int64 UpdateDate      = 2;
    int32 CustomerId      = 3;
    int32 PaymentBillId   = 4;
    int64 NewOrderId      = 5;
    int64 NewBillId       = 6;
    string Sku            = 7;
    int32 Qty             = 8;
    bool IsCaptain        = 9;
    bool IsPayed          = 10;
    bool IsCannceled      = 11;
    int32 MemberStatus    = 12;
    repeated Order orders = 13;
}


message Order {
    int32 OrderId               = 1;
    string OrderNumber          = 2;
    int32 OrderStatusId         = 5;
    int32 PackageStatusId       = 7;
    string OriginCode           = 8;
    string Notes                = 10;
    string NewOrderStatusName   = 11;
    string OldOrderStatusName   = 12;
    int32 PackageId             = 14;
    int32 OrderItemId           = 15;
    string ProductRemark        = 17;
    string OPurchaseType        = 18;
}

message UpdateGroupOrderReq {
    GroupOrder order = 1;
}

message UpdateGroupMembersReq {
    GroupMember mem = 1;
}


